# Insights-Indexer

./: .gitignore  docker-entrypoint.sh  manage.py  pyproject.toml  run.py  settings.py
.github/workflows/: build-insights-indexer-push-tag-shared.yaml
cache/: org_cache.py  project_cache.py
db/elasticsearch/: connection.py
db/postgres/: connection.py
db/redis/: connection.py
docker/: Dockerfile  docker-compose.yml  dockerfile
flowrun/: dtos.py  tests.py  transformer.py
flowrun/storage/: elasticsearch.py  inmemory.py  postgresql.py
shared/: lua_scripts.py  processors.py  queue_handlers.py  storage.py  webhook.py
